@@ -5,7 +5,7 @@
 //   Jb Evain (jbevain@gmail.com)
 //
 // Generated by /CodeGen/cecil-gen.rb do not edit
-// Thu Dec 22 17:41:27 CET 2005
+// Fri Dec 30 20:20:47 CET 2005
 //
 // (C) 2005 Jb Evain
 //
@@ -225,7 +225,7 @@ namespace Mono.Cecil.Binary {
 
 		public override void VisitImportAddressTable (ImportAddressTable iat)
 		{
-			m_binaryReader.BaseStream.Position = m_image.ResolveTextVirtualAddress (
+			m_binaryReader.BaseStream.Position = m_image.ResolveVirtualAddress (
 				m_image.PEOptionalHeader.DataDirectories.IAT.VirtualAddress);
 
 			iat.HintNameTableRVA = new RVA (m_binaryReader.ReadUInt32 ());
@@ -241,7 +241,7 @@ namespace Mono.Cecil.Binary {
 				VisitDebugHeader (m_image.DebugHeader);
 			}
 
-			m_binaryReader.BaseStream.Position = m_image.ResolveTextVirtualAddress (
+			m_binaryReader.BaseStream.Position = m_image.ResolveVirtualAddress (
 				m_image.PEOptionalHeader.DataDirectories.CLIHeader.VirtualAddress);
 			header.Cb = m_binaryReader.ReadUInt32 ();
 			header.MajorRuntimeVersion = m_binaryReader.ReadUInt16 ();
@@ -271,13 +271,13 @@ namespace Mono.Cecil.Binary {
 				m_binaryReader.ReadUInt32 ());
 
 			if (header.StrongNameSignature != DataDirectory.Zero) {
-				m_binaryReader.BaseStream.Position = m_image.ResolveTextVirtualAddress (
+				m_binaryReader.BaseStream.Position = m_image.ResolveVirtualAddress (
 					header.StrongNameSignature.VirtualAddress);
 				header.ImageHash = m_binaryReader.ReadBytes ((int) header.StrongNameSignature.Size);
 			} else {
 				header.ImageHash = new byte [0];
 			}
-			m_binaryReader.BaseStream.Position = m_image.ResolveTextVirtualAddress (
+			m_binaryReader.BaseStream.Position = m_image.ResolveVirtualAddress (
 				m_image.CLIHeader.Metadata.VirtualAddress);
 			m_image.MetadataRoot.Accept (m_mdReader);
 		}
@@ -321,7 +321,7 @@ namespace Mono.Cecil.Binary {
 
 		public override void VisitImportTable (ImportTable it)
 		{
-			m_binaryReader.BaseStream.Position = m_image.ResolveTextVirtualAddress (
+			m_binaryReader.BaseStream.Position = m_image.ResolveVirtualAddress (
 				m_image.PEOptionalHeader.DataDirectories.ImportTable.VirtualAddress);
 
 			it.ImportLookupTable = new RVA (m_binaryReader.ReadUInt32 ());
@@ -333,7 +333,7 @@ namespace Mono.Cecil.Binary {
 
 		public override void VisitImportLookupTable (ImportLookupTable ilt)
 		{
-			m_binaryReader.BaseStream.Position = m_image.ResolveTextVirtualAddress (
+			m_binaryReader.BaseStream.Position = m_image.ResolveVirtualAddress (
 				m_image.ImportTable.ImportLookupTable.Value);
 
 			ilt.HintNameRVA = new RVA (m_binaryReader.ReadUInt32 ());
@@ -341,7 +341,7 @@ namespace Mono.Cecil.Binary {
 
 		public override void VisitHintNameTable (HintNameTable hnt)
 		{
-			m_binaryReader.BaseStream.Position = m_image.ResolveTextVirtualAddress (
+			m_binaryReader.BaseStream.Position = m_image.ResolveVirtualAddress (
 				m_image.ImportAddressTable.HintNameTableRVA);
 
 			hnt.Hint = m_binaryReader.ReadUInt16 ();
@@ -349,13 +349,13 @@ namespace Mono.Cecil.Binary {
 			byte [] bytes = m_binaryReader.ReadBytes (11);
 			hnt.RuntimeMain = Encoding.ASCII.GetString (bytes, 0, bytes.Length);
 
-			m_binaryReader.BaseStream.Position = m_image.ResolveTextVirtualAddress (
+			m_binaryReader.BaseStream.Position = m_image.ResolveVirtualAddress (
 				m_image.ImportTable.Name);
 
 			bytes = m_binaryReader.ReadBytes (11);
 			hnt.RuntimeLibrary = Encoding.ASCII.GetString (bytes, 0, bytes.Length);
 
-			m_binaryReader.BaseStream.Position = m_image.ResolveTextVirtualAddress (
+			m_binaryReader.BaseStream.Position = m_image.ResolveVirtualAddress (
 				m_image.PEOptionalHeader.StandardFields.EntryPointRVA);
 			hnt.EntryPoint = m_binaryReader.ReadUInt16 ();
 			hnt.RVA = new RVA (m_binaryReader.ReadUInt32 ());
